# penguin_rs

./: .gitignore  Cargo.toml  check_density_theory.py  check_particle_theory.py  evolution_system.py  evolution_system2.py  load_and_analysis.py  load_and_angle.py  load_and_check_grad.py  load_and_compare.py  load_and_fft.py  load_and_fit_vel.py  load_and_grad.py  load_and_phase.py  load_and_plot_invalid.py  load_and_relation.py  load_and_show.py  penguin_rs.pyi  pyproject.toml  run.py  sim_and_dump.py  sim_and_show.py  sim_and_show2.py  transfer.py  util.py
src/: lib.rs  main.rs
src/simulator/: mod.rs  simulator.rs
util/: __init__.py  model.py  plot.py  stable_temp.py  stastistic.py  util.py
util/animation/: TTplot.py  __init__.py  check_env.py  density.py  grad.py  main.py  vel_ratio.py
util/theory/: density.py  particle.py
